# tempo

./: .env.example  .gitignore  COACH_UI_SPEC.md  COACH_V4_FINAL_DESIGN.md  COACH_V4_MULTICALL_SPEC.md  CODERABBIT_FIXES_PR2.md  OURA_IMPLEMENTATION_GUIDE.md  PRIVACY.md  SPEC.md  TERMS.md  TODO.md  package-lock.json  package.json
.claude/: HANDOFF.md
.github/workflows/: frontend-ci.yml  rust-ci.yml
docs/archive/: COACH_V4_SINGLE_CALL_SPEC.md  REFINEMENTS_AND_OURA_PLAN.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20241209000001_initial_schema.sql  20241209000002_analysis_layer.sql  20241209000003_workout_samples.sql  20241209000004_workout_analysis.sql  20241209000005_training_plan.sql  20241209000006_plan_v2.sql  20241210000001_ceiling_based_progressions.sql  20241211000001_add_oura_tables.sql
src-tauri/src/: analysis.rs  db.rs  lib.rs  llm.rs  main.rs  oura.rs  progression.rs  strava.rs  test_utils.rs
src-tauri/src/commands/: analysis.rs  mod.rs  oura.rs  progression.rs  strava.rs
src-tauri/src/models/: analysis.rs  mod.rs  recovery.rs  workout.rs
src-tauri/src/prompts/: coach_system.txt  coach_system_v4.txt
src/components/: CoachCards.css  CoachCards.tsx
src/types/: analysis.ts
